# calc-lang

./: .pre-commit-config.yaml  Makefile  example.calc  pyproject.toml  requirements.dev.txt  requirements.test.txt  requirements.txt  runtime.c
src/: parse.py
src/calc/: cli.py  codegen.py  parse.py
src/calc/grammars/: calc.lark
