[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools" ]

[project]
name = "project-name"
version = "0.0.1"
description = "Description of project"
authors = [ { name = "Ben Gosney", email = "bengosney@googlemail.com" } ]
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [ "lark" ]
optional-dependencies.dev = [
  "icecream",
]
optional-dependencies.test = [
  "pytest",
]

[tool.setuptools]
license-files = [ "LICENSE" ]

[tool.ruff]
target-version = "py314"
line-length = 120
lint.select = [ "C90", "E4", "E7", "E9", "F", "N", "UP" ]
